syntax="proto3";

package auth;

option go_package = "github.com/balobas/auth_service/pkg/auth_v1;auth_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc UpdateUser(UpdateUserRequest) returns (JwtResponse); // required accessJwt in ctx
    rpc GetUser(GetUserRequest) returns (GetUserResponse); // required accessJwt in ctx
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty); // required accessJwt in ctx
    rpc GetAdmins(google.protobuf.Empty) returns (AdminsResponse);

    rpc Login(LoginRequest) returns (JwtResponse);
    rpc Logout(LogoutRequest) returns (google.protobuf.Empty); // required accessJwt in ctx
    rpc Refresh(RefreshRequest) returns (JwtResponse);

    rpc Verify(VerifyRequest) returns (google.protobuf.Empty);
    rpc VerifyAccess(VerifyAccessRequest) returns (google.protobuf.Empty);
    rpc VerifyEmail(VerifyEmailRequest) returns (google.protobuf.Empty);

    rpc CreatePermission(Permission) returns (google.protobuf.Empty);
    rpc UpdatePermission(Permission) returns (google.protobuf.Empty);
    rpc DeletePermission(Permission) returns (google.protobuf.Empty);
    rpc GetPermissions(GetPermissionsParams) returns (Permissions);

    rpc CreateRole(Role) returns (google.protobuf.Empty);
    rpc UpdateRole(Role) returns (google.protobuf.Empty);
    rpc DeleteRole(Role) returns (google.protobuf.Empty);
    rpc GetRole(GetRoleParams) returns (Role);
    rpc GetRoles(GetRolesParams) returns (Roles);

    rpc AddRoleToUser(UserRoleParams) returns (google.protobuf.Empty);
    rpc RemoveRoleFromUser(UserRoleParams) returns (google.protobuf.Empty);
    rpc GetUserRoles(UUID) returns (Roles);

    rpc AddPermissionsToRole(RolePermissionsParams) returns (google.protobuf.Empty);
    rpc RemovePermissionsFromRole(RolePermissionsParams) returns (google.protobuf.Empty);
    rpc GetRolePermissions(GetRolePermissionsParams) returns (Permissions);

    rpc AddResourcePermission(ResourcePermissionParams) returns (google.protobuf.Empty);
    rpc DeleteResourcePermission(ResourcePermissionParams) returns (google.protobuf.Empty);
    rpc GetResourcesPermissions(GetResourcesPermissionsParams) returns (ResourcesPermissions);
    rpc UpdateResourcePermission(ResourcePermissionParams) returns (google.protobuf.Empty);
    rpc GetResourcePermission(GetResourcePermissionParams) returns (Permission);

    rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
}

message UUID {
    string uid = 1;
}

message Role {
    string name = 1;
    string description = 2;
}

message GetRoleParams {
    string role = 1;
}

message GetRolesParams {
    string role_pattern = 1;
    int64 limit = 2;
    int64 offset = 3;
}

message Roles {
    repeated Role roles = 1;
}

message UserRoleParams {
    string user_uid = 1;
    string role = 2;
}

message RolePermissionsParams {
    string role = 1;
    repeated string permissions = 2;
}

message GetRolePermissionsParams {
    string role = 1;
}

message ResourcePermissionParams {
    string uri = 1;
    string method = 2;
    string permission = 3;
}

message GetResourcesPermissionsParams {
    int64 limit = 1;
    int64 offset = 2;
}

message GetResourcePermissionParams {
    string uri = 1;
    string method = 2;
}

message ResourcesPermissions {
    repeated ResourcePermissionParams resources_permissions = 1;
}

message VerifyAccessRequest {
    string uri = 1;
    string method = 2;
    string accessjwt = 3;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string uid = 1;
}

message AdminCreateRequest {
    string email = 1;
    string password = 2;
}

message AdminCreateResponse {
    string uid = 1;
}

message UpdateUserRequest {
    string uid = 1;
    string email = 2;
    string password = 3;
}

message GetUserRequest {
    string uid = 1;
    string email = 2;
}

message GetUserResponse {
    string uid = 1;
    string email = 2;
    repeated string roles = 3;
    bool is_verified = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message AdminsResponse {
    repeated GetUserResponse users = 1;
}

message DeleteUserRequest {
    string uid = 1;
}

message VerifyEmailRequest {
    string token = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message JwtResponse {
    string accessJwt = 1;
    string refreshJwt = 2;
}

message LogoutRequest {
    string uid = 1;
}

message RefreshRequest {
    string refreshJwt = 1;
}

message VerifyRequest {
    string jwt = 1;
}

message UserPermissionParams {
    string user_uid = 1;
    string permission = 2;
}

message Permission {
    string key = 1;
    string description = 2;
}

message GetPermissionsParams {
    string permission_pattern = 1;
}

message Permissions {
    repeated Permission permissions = 1;
}

message HealthCheckResponse {
    string status = 1;
    string gitTag = 2;
    string gitBranch = 3;
    google.protobuf.Timestamp upTime = 4;
}